--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "ahooks": "^2.10.9",
     "json-server": "^0.16.3",
     "qs": "^6.10.1",
     "react": "^17.0.2",
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/qs": "^6.9.7",
     "prettier": "2.3.2"
   }
 }
