--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "ahooks": "^2.10.9",
+    "jira-dev-tool": "^1.7.61",
     "json-server": "^0.16.3",
     "qs": "^6.10.1",
     "react": "^17.0.2",
@@ -24,7 +25,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "json-server": "json-server __json-server-mock__/db.json --watch --port 8001 --middlewares ./__json-server-mock__/middleware.js"
   },
   "eslintConfig": {
     "extends": [
@@ -47,5 +47,8 @@
   "devDependencies": {
     "@types/qs": "^6.9.7",
     "prettier": "2.3.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
