dev:style-components完善项目列表样式

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ahooks": "^2.10.9",
     "antd": "^4.16.11",
     "craco-less": "^1.18.0",
+    "dayjs": "^1.10.6",
     "jira-dev-tool": "^1.7.61",
     "json-server": "^0.16.3",
     "qs": "^6.10.1",
