--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "antd": "^4.16.11",
     "craco-less": "^1.18.0",
     "dayjs": "^1.10.6",
-    "jira-dev-tool": "^1.7.61",
+    "jira-dev-tool": "^1.6.59",
     "json-server": "^0.16.3",
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.19.6",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
