--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-query": "^3.19.6",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@types/qs": "^6.9.7",
+    "@types/react-helmet": "^6.1.2",
     "prettier": "2.3.2"
   },
   "msw": {
