--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^4.16.11",
     "craco-less": "^1.18.0",
     "dayjs": "^1.10.6",
+    "history": "^5.0.1",
     "jira-dev-tool": "^1.6.59",
     "json-server": "^0.16.3",
     "qs": "^6.10.1",
@@ -23,6 +24,8 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-query": "^3.19.6",
+    "react-router": "^6.0.0-beta.8",
+    "react-router-dom": "^6.0.0-beta.8",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
