--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "devDependencies": {
     "@types/qs": "^6.9.7",
     "@types/react-helmet": "^6.1.2",
+    "@welldone-software/why-did-you-render": "^6.2.1",
     "prettier": "2.3.2"
   },
   "msw": {
