--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "json-server": "^0.16.3",
     "qs": "^6.10.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-query": "^3.34.0",
@@ -57,6 +58,7 @@
   },
   "devDependencies": {
     "@types/qs": "^6.9.7",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-helmet": "^6.1.2",
     "@welldone-software/why-did-you-render": "^6.2.1",
     "prettier": "2.3.2"
